<resources>
    <string name="app_name">TrivialAndroid</string>
    <string name="last_initial">Last Initial</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="an_avatar">An Avatar</string>
    <string name="quiz_of_quizzes">%1$s / %2$s</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="category">Category</string>
    <string name="sign_out">Reset points</string>
    <string name="x_points">%1$d pts</string>
    <string name="back">back</string>
    <string name="activity_treeview_label">Play Offline (Check a Category)</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_nd_category_review">Review Mode</string>
    <string name="menu_nd_one_player">One Player</string>
    <string name="menu_nd_multi_player">Play Online</string>
    <string name="menu_nd_multi_turn_based_multplayer">Play Turn-Based</string>
    <string name="app_id">211137909087</string>
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="no_login_ok_to_try">You aren\'t not log in! OK to try it</string>
    <string name="no_login">You aren\'t not log in!</string>
    <string name="game_title">Trivial Android</string>
    <string name="game_blurb">Repasa tus conocimientos de programación en Android y juega en red – Master UPV.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="url_categories">http://mmoviles.upv.es/trivial/trivialandroid.json</string>
    <string name="main_title">Android Programing Trivia</string>
    <string name="main_text">¿Eres un experto programador de Android? ¿Quieres poner a prueba tus conocimientos y competir con otros desarrolladores? Descubre los tres modos para repasar, comprobar tus conocimientos y competir contra otros programadores (pulsa AYUDA).</string>
    <string name="main_learm">Si lo que quieres es aprender, en <a href="http://www.androidcurso.com">www.androidcurso.com</a> encontrarás cursos gratuitos, cursos de especialización y el Máster de la <a href="http://www.upv.es">Universidad Politécnica de Valencia</a> en desarrollo de aplicaciones Android.</string>
    <string name="about_title">About Android Programing Trivia</string>
    <string name="abot_text1">Programa desarrollado en el <a href="http://www.androidcurso.com" >Master de Desarrollo de aplicaciones Android</a> de la <a href="www.upv.es">Universidad Politécnica de Valencia</a>. Programación desarrollada por Jordi Vilches, siendo su proyecto final de Master. Dirección a cargo de Jesús Tomás. Interfaz de usuario basado en Topeka, aplicación desarrollada por Google para ilustrar el uso de Material Design.</string>
    <string name="abot_text2">Preguntas escritas por: Jesús Tomás - más de un 85%; Vicente Carbonell - Firebase (notificaciones, almacenamiento, Functions y Dynamic Links), aplicaciones web/hosting, Android TV, Google Cast y Google Play Game; Antonio Albiol - OpenCV. Gonzalo Puga:Android Auto, Hilos. David Santamaría - Testing. Salva Santonja - Android Things (comunicaciones) y algunos más.</string>
    <string name="help_title">Help Android Programing Trivia</string>
    <string name="help_text1">Selecciona el modo de juego desde el menú de navegación:</string>
    <string name="help_text2"><b>Modo repaso:</b> navega por todas las materias desarrolladas en el Master de Android y revisa tus conocimientos. En muchas de las materias podrás ver vídeos explicativos o acceder a tutoriales.</string>
    <string name="help_text3"><b>Modo un jugador:</b> podrás evaluar tus conocimientos a partir de un test aleatorio de 10 preguntas. Puedes seleccionar una o más categorías / subcategorías.</string>
    <string name="help_text4"><b>Modo multijugador en tiempo real:</b> Compite con amigos u otros jugadores para ver quien responde más preguntas en el menor tiempo posible. Puedes configurar las categorías y número de jugadores.</string>
    <string name="help_text5"><b>Modo multijugador por turnos:</b> Compite con amigos u otros jugadores para ver quién acierta al menos una pregunta de cada una de las categorías, en el menor número de turnos. Puedes personalizar el número de categorías. </string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="choose_category">Choose Category to Play</string>
    <string name="choose_category_online">Choose Category to Play Online</string>
    <string name="play_anyone">Play AnyOne</string>
    <string name="select_players">Select Players</string>
    <string name="select_categories">Select Categories</string>
    <string name="all_categories">(All Categories)</string>
    <string name="total_players">Total PLayers</string>
    <string name="show_invitations">Invitations …</string>
    <string name="play_online">Play Online</string>
    <string name="num_players">Num. Players: </string>
    <string name="oops">"Oops! Something wrong happened!"</string>
    <string name="disconnect_room_error">Why: Disconnect From Room</string>
    <string name="connected_error">Why: Connected Error</string>
    <string name="join_error">Why: Join Error</string>
    <string name="select_2_cat">You must select at least 2 categories, and maximum of 31</string>
    <string name="select_more_cat">Necesitas seleccionar más categorías. Al menos necesitas</string>
    <string name="select_less_cat">Necesitas seleccionar menos categorías. Menos de 31 </string>
    <string name="choose_category_turnbased">Choose Category/ies to Play Turn Based</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="error_get_inbox_intent">There was a problem getting the inbox intent!</string>
    <string name="error_get_select_opponents">There was a problem getting the select opponents intent!</string>
    <string name="turn_label">Turn %1$d</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="hello_world">Hello world!</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="room_created_error">Why: Room Created With Errors!</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="game_canceled">This game was canceled!</string>
    <string name="game_expired">This game is expired.  So sad!</string>
    <string name="waiting_automatch">Waiting for \nan automatch partner...</string>
    <string name="complete">Complete!</string>
    <string name="your_turn">\nIt\'s your turn!\n\t</string>
    <string name="match_finish">Finalized Game</string>
    <string name="canceled">Canceled!</string>
    <string name="expired">Expired!</string>
    <string name="next_player">Next player\n</string>
    <string name="still_waiting_invitations">Still waiting for \ninvitations!</string>
    <string name="problem_finish">There is a problem ending the game</string>
    <string name="game_corrupt">The game is corrupt</string>
    <string name="categories_d_d">Categories (%d/%d)</string>
    <string name="invitation_turn_based">The invitation corresponds to a TURN BASED GAME</string>
    <string name="problem_activation_hint">There was a problem getting the activation hint!</string>
    <string name="problem_getting">There was a problem getting the player!</string>
    <string name="game_over">This game is over; someone finished it, and so did you! There is nothing to be done.</string>
    <string name="match">Match</string>
    <string name="canceled_players_end">This match was canceled. All other players will have their game ended.</string>
    <string name="problem_cancelling">There was a problem cancelling the match!</string>
    <string name="problem_leaving">There was a problem leaving the match!</string>
    <string name="waiting_auto_match">Waiting for auto-match...</string>
    <string name="still_waiting_automatch">We\'re still waiting for an automatch partner.</string>
    <string name="not_your_turn">It\'s not your turn...</string>
    <string name="good_inititative">Good inititative!</string>
    <string name="waiting_invitations_be_patient">Still waiting for invitations. \n\n Be patient!</string>
    <string name="invitation_real_time">The invitation corresponds to a REAL TIME GAME</string>
    <string name="out_of_date">Match was out of date, updating with latest match data...</string>
    <string name="error_string">Did not have warning or string to deal with:</string>
    <string name="warning">Warning</string>
    <string name="oops_no_internet">Oops! You do not have an Internet connection</string>
    <string name="no_connectio_gpg">It has not been possible to connect with Google Play Games</string>
    <string name="select_partida">Select Match …</string>
    <string name="new_match">New Game</string>
    <string name="num_quizzes">Num. Quizzes</string>
    <string name="leave_game">Leave Game </string>
    <string name="score">Statistics</string>
</resources>