<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category_selection"
            android:checked="true"
            android:icon="@drawable/ic_folder_multiple"
            android:title="@string/menu_nd_category_review" />
        <item
            android:id="@+id/nav_tree_view_play_offline"
            android:icon="@drawable/ic_playlist_check"

            android:title="@string/menu_nd_one_player" />
        <item
            android:id="@+id/nav_tree_view_quick_match"
            android:icon="@drawable/ic_play_arrow_black"
                android:title="@string/menu_nd_multi_player" />
        <item
            android:id="@+id/nav_tree_view_turn_base_multplayer"
            android:icon="@drawable/play_turn_based_icon"
            android:title="@string/menu_nd_multi_turn_based_multplayer" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="" android:menuCategory="container">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
