<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
<RelativeLayout
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAAAAAAA"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:id="@+id/panel_game" android:visibility="visible"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtNameAvatar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuInferior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlayAnyone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_purple_background"
                android:padding="0dp"
                android:text="@string/play_anyone"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnNewGame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_green_primary_dark"
                android:padding="0dp"
                android:text="@string/new_match"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <SeekBar
            android:id="@+id/sbPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:max="9"
            android:progress="2"
            android:thumb="@drawable/thumb_image"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/total_players" />

        <SeekBar
            android:id="@+id/sbNumQuizzes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:max="55"
            android:progress="5"
            android:thumb="@drawable/thumb_image"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtNumQuizzes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="@string/num_quizzes" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


        </LinearLayout>

        <Button
            android:id="@+id/btnPartidaPorTurnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_partida" />

        <LinearLayout
            android:id="@+id/gameplay_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:gravity="center"

                android:text="@string/match_instructions" />

            <TextView
                android:id="@+id/turn_counter_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:gravity="center"

                android:text="@string/turn_counter" />

            <EditText
                android:id="@+id/data_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="#FFFFFFFF"
                android:gravity="center"
                android:inputType="textEmailAddress|textEmailSubject"
                android:maxLines="1"
                android:text="@string/hello_world" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/playButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="Play"

                    />

                <Button
                    android:id="@+id/doneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/done"

                    />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/cancel"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/leaveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/leave"

                    />

                <Button
                    android:id="@+id/finishButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:text="@string/finish"

                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <WebView
        android:layout_below="@id/panel_game"
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

</RelativeLayout></ScrollView>